--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1,  target-densitydpi=device-dpi" />
+        
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Bluetooth Count</title>
+        <title>BluefruitLE</title>
     </head>
     <body>
-        <h1>Bluetooth Counter</h1>
-        <div id="counter">...</div>
-        <div id="statusDiv"></div>
+        <div class="app">
+            <h1>BluefruitLE</h1>
+            <div id="mainPage">
+                <ul id="deviceList">                    
+                </ul>
+                <button id="refreshButton">Refresh</button>
+            </div>
+            <div id="detailPage">
+                <div id="resultDiv"></div>
+                <div>
+                    <input type="text" id="messageInput" value="Hello"/>
+                    <button id="sendButton">Send</button>                    
+                </div>
+                <button id="disconnectButton">Disconnect</button>
+            </div>            
+        </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
