--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <button id="refreshButton">Refresh</button>
                 <div id="resultDiv"></div>
                 <div>
+                    <input type="text" id="messageOutput"  />
+                </div>                
+                <div>
                     <input type="text" id="messageInput" value="Hello"/>
                     <button id="sendButton">Send</button>                    
                 </div>
